test_suite/tests/ui/unexpected-literal/variant.stderr
error: expected path
 --> tests/ui/unexpected-literal/variant.rs:5:13
  |
5 |     #[serde("literal")]
  |             ^^^^^^^^^
